--- a/css/_variables.css
+++ b/css/_variables.css
@@ -8,4 +8,5 @@
     --contact-color: #757575;
     --background-color-dark: #2F303A;
     --background-color-white: #ffffff;
+    --background-color-grey: #E5E5E5;
 }
